--- a/style.css
+++ b/style.css
@@ -94,9 +94,6 @@ body
     min-width: 0;
     line-height: 1;
 }
-.feat-traits
-{
-}
 .feat-trait
 {
     font-family: "Myriad Apple";
@@ -124,6 +121,7 @@ hr
     flex-wrap: wrap;
     gap: 5px;
     align-items: center;
+    width: 100%
 }
 }
 
@@ -157,6 +155,10 @@ hr
     grid-template-columns: 1fr auto;
 }
 .add-trait
+{
+    display: none;
+}
+.feat-traits:not(:has(.feat-trait)) + .trait-hr
 {
     display: none;
 }
