--- a/style.css
+++ b/style.css
@@ -157,6 +157,54 @@ hr
 
 @media print
 {
+.horizontal-lines
+{
+    position: fixed;
+    display: grid;
+    grid-auto-flow: row;
+    grid-auto-rows: 2.5in;
+    height: 100%;
+    top: 50%;
+}
+.horizontal-lines.left
+{
+    left: 0;
+}
+.horizontal-lines.right
+{
+    right: 0;
+}
+.horizontal-line
+{
+    height: 1px;
+    width: .4in;
+    background: black;
+    justify-self: center;
+}
+.vertical-lines
+{
+    position: fixed;
+    justify-content: center;
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 2.5in;
+    width: 100%;
+}
+.vertical-lines.top
+{
+    top: 0;
+}
+.vertical-lines.bottom
+{
+    bottom: 0;
+}
+.vertical-line
+{
+    width: 1px;
+    height: .65in;
+    background: black;
+    justify-self: center;
+}
 .feat-name::placeholder
 {
     color: transparent;
