--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ hr
     margin-top: 2px;  
     margin-bottom: 2px;  
 }
-.feat-info, .feat-description
+.feat-info
 {
     display: flex;
     align-items: center;
@@ -174,6 +174,10 @@ hr
 {
     content: attr(placeholder);
     color: gray;
+}
+.action-text
+{
+    font-family: "Pathfinder Actions";
 }
 }
 
